--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
                 <h2>Get to know me!</h2>
             </div>
              <div>
-                I'm a Frontend Web Developer building the Front-end of Websites and<br> Web Applications that leads to the success of the overall product. Check<br> out some of my work in the Projects section.<br><br>
+                I'm a Backend Web Developer building the Back-end of Websites and<br> Web Applications that leads to the success of the overall product. Check<br> out some of my work in the Projects section.<br><br>
 I also like sharing content related to the stuff that I have learned over the<br> years in Web Development so it can help other people of the Dev<br> Community. Feel free to Connect or Follow me on my <a href="#" class="link">Linkedin</a> where I<br> post useful content related to Web Development and Programming<br><br>
 I'm open to Job opportunities where I can contribute, learn and grow. If<br> you have a good opportunity that matches my skills and experience then<br> don't hesitate to contact me.<br>
              </div>
